# spiral-flap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
scripts/: linux.sh  windows.bat
src/: CMakeLists.txt  bird.cpp  bird.h  gameloop.cpp  gameloop.h  main.cpp  map.cpp  map.h
